--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,6 +1,41 @@
 <!-- Dashboard -->
-<h1>Hero Layout</h1>
 
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+    <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }">
+        <mat-toolbar
+            ><!--color="warn" o otro color -->
+            <span>Menú</span>
+            <span class="spacer"></span>
+            <button mat-icon-button (click)="sidenav.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
+        </mat-toolbar>
 
-<h5>Footer</h5>
+        <mat-nav-list>
+            <mat-list-item
+                *ngFor="let item of sidebarItems"
+                [routerLink]="item.url"
+                (click)="sidenav.toggle()"
+            >
+                <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+                {{ item.label }}
+            </mat-list-item>
+        </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-toolbar color="primary">
+        <button mat-icon-button (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <span class="spacer"></span>
+        <button mat-button>
+            <mat-icon>logout</mat-icon>
+            Logout
+        </button>
+    </mat-toolbar>
+
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</mat-sidenav-container>
