--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,7 @@
 <h1>
-    Editar / Agregar Héroe
-    <small>Superman</small>
+    {{ currentHero.id ? "Editar" : "Agregar" }}
+    héroe
+    <small *ngIf="currentHero.id">{{ currentHero.superhero }}</small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -9,30 +10,54 @@
     <div class="col-12 sm:col-6">
         <mat-card>
             <mat-card-content>
-                <div class="grid">
+                <form
+                    class="grid"
+                    [formGroup]="heroForm"
+                    (ngSubmit)="onSubmit()"
+                >
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Súper héroe</mat-label>
-                        <input matInput type="text" required />
+                        <input
+                            matInput
+                            type="text"
+                            required
+                            formControlName="superhero"
+                        />
                     </mat-form-field>
 
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Alter ego</mat-label>
-                        <input matInput type="text" required />
+                        <input
+                            matInput
+                            type="text"
+                            required
+                            formControlName="alter_ego"
+                        />
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Primera aparición</mat-label>
-                        <input matInput type="text" required />
+                        <input
+                            matInput
+                            type="text"
+                            required
+                            formControlName="first_appearance"
+                        />
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Personajes</mat-label>
-                        <input matInput type="text" required />
+                        <input
+                            matInput
+                            type="text"
+                            required
+                            formControlName="characters"
+                        />
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Creador</mat-label>
-                        <mat-select required="">
+                        <mat-select required="" formControlName="publisher">
                             <mat-option
                                 *ngFor="let publisher of publishers"
                                 [value]="publisher.id"
@@ -41,18 +66,30 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
+
+                    <mat-form-field class="col-12">
+                        <mat-label>Alternative Image</mat-label>
+                        <input matInput type="text" formControlName="alt_img" />
+                    </mat-form-field>
+                </form>
 
                 <div class="flex justify-content-between">
                     <button
+                        *ngIf="currentHero.id"
+                        (click)="onDeleteHero()"
                         mat-flat-button
-                        color="warn">
-                            Borrar
+                        color="warn"
+                    >
+                        Borrar
                     </button>
+                    <span></span>
 
+                    <!-- en el boton guardar llamo nuevamente el metodo onSubmit porque esta fuera del formulario -->
                     <button
                         mat-flat-button
-                        color="primary">
+                        color="primary"
+                        (click)="onSubmit()"
+                    >
                         <mat-icon>save</mat-icon>
                         Guardar
                     </button>
@@ -63,7 +100,11 @@
 
     <div class="col-12 sm:col-6">
         <mat-card>
-            <img src="" alt="imagen del héroe" mat-card-image>
+            <img
+                [src]="currentHero | heroImage"
+                alt="imagen del héroe"
+                mat-card-image
+            />
         </mat-card>
     </div>
 </div>
