--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -27,9 +27,11 @@
         <button mat-icon-button (click)="sidenav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-
         <span class="spacer"></span>
-        <button mat-button>
+
+        <span>{{ user?.email }}</span>
+
+        <button mat-button (click)="onLogout()">
             <mat-icon>logout</mat-icon>
             Logout
         </button>
